fix: build query 33 rules